<resources>
    <string name="app_name">PC-CARE</string>
    <string name="suppiler_Home">Supplier</string>
    <string name="update_supplier">Update</string>
    <string name="Customer_Add_Det">Customer</string>
    <string name="update_customer">Update</string>
    <string name="income">Income</string>
    <string name="cusname">Name</string>
    <string name="cusdevice">Device</string>
    <string name="cusissue">Issues</string>
    <string name="cusparts">Parts</string>
    <string name="custotalamount">Total Amount</string>
    <string name="cuspaid">Paid:</string>
    <string name="cusphoneno">Phone No</string>
    <string name="supplierpaytxt">Supplier Payaments</string>
    <string name="employyepay">Employees Payments</string>
    <string name="expneditures">Expenditures</string>
    <string name="totalprofit">Total Profit</string>
    <string name="supname">Name</string>
    <string name="supaddress">Address</string>
    <string name="supitems">Items</string>
    <string name="supamount">Total Amount</string>
    <string name="suppaid">Paid</string>
    <string name="supphone">Phone No</string>


    <string name="stock_header">Stock</string>
    <string name="list_layout_edit_btn">Edit</string>
    <string name="list_layout_pull_btn">Pull</string>
    <string name="list_layout_push_btn">Push</string>
    <string name="additem_header">Add Item</string>
    <string name="item_code_hint">Item code</string>
    <string name="item_name_hint">Item name</string>
    <string name="item_brand_hint">Brand</string>
    <string name="item_type_hint">Item type</string>
    <string name="add_item_btn">Add</string>
    <string name="edititem_header">Edit Item</string>
    <string name="update_btn_txt">Update</string>
    <string name="delete_btn_txt">Delete</string>
    <string name="item_discription">Item Description</string>
    <string name="item_availability">Availability</string>
    <string name="itemcode">Item code :</string>
    <string name="Item_model">Model :</string>
    <string name="availability">Availability :</string>
    <string name="brand">Brand :</string>
    <string name="addnumber">+</string>
    <string name="removenumber">-</string>
    <string name="model_hint">Model</string>
    <string name="availability_hint">Availability</string>
    <string name="qty">Qty :</string>
    <string name="username_already_exists">Username already exists</string>

    <string name="Employee">Employee</string>
    <string name="EmpName">Name</string>
    <string name="EmpAge">Age</string>
    <string name="EmpPhone">Phone</string>
    <string name="EmpEmail">Email</string>
    <string name="EmpEmailLogin">employee@gmail.com</string>
    <string name="LoginBtn">LOGIN</string>
    <string name="submit">SUBMIT</string>
    <string name="empPassword">......................</string>
    <string name="ForgotPwd">Forgot Password?</string>
    <string name="ForgotPawd">Forgot Password</string>
    <string name="Reset">RESET</string>
    <string name="EmpSalary">Salary</string>
    <string name="Empbtn1">SAVE RECORDS</string>
    <string name="Empbtn2">VIEW RECORDES</string>
    <string name="SgnUporLogin">Sign In </string>
    <string name="SgninOption">----------------SignIn Using----------------</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="signup">SIGNUP</string>
    <string name="emailAgain">Enter your email here</string>
    <string name="resetPassword">Reset password here</string>
    <string name="uptdEmployee">Employee</string>
    <string name="updtEmpName">Name</string>
    <string name="updtEmpAge">Age</string>
    <string name="updtEmpPhone">Phone</string>
    <string name="updtEmpEmail">Email</string>
    <string name="updtEmpSalary">Salary</string>
    <string name="updateBtn">UPDATE</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
