<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardMaxElevation="3dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="3dp"
    app:cardBackgroundColor="#ffff"
    app:contentPadding="5dp"
    android:background="@drawable/form11">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="141dp"
            android:layout_height="match_parent"
            android:background="@drawable/emp3" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow>

                <TextView
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/EmpName"
                    android:textColor="#000"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="88dp"
                    android:layout_height="match_parent"
                    android:textColor="#000"
                    android:textSize="10sp"
                    />
            </TableRow>
        <TableRow>

            <TextView
                android:id="@+id/editAge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/EmpAge"
                android:textColor="#000"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtAge"
                android:layout_width="94dp"
                android:layout_height="match_parent"
                android:textColor="#000"
                android:textSize="10sp" />


            </TableRow>
            <TableRow>

                <TextView
                    android:id="@+id/editPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/EmpPhone"
                    android:textColor="#000"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtPhone"
                    android:layout_width="88dp"
                    android:layout_height="match_parent"
                    android:textColor="#000"
                    android:textSize="10sp"
                    />


            </TableRow>
            <TableRow>

                <TextView
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/EmpEmail"
                    android:textColor="#000"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="88dp"
                    android:layout_height="match_parent"

                    android:textColor="#000"
                    android:textSize="10sp"
                    />


            </TableRow>
            <TableRow>

                <TextView
                    android:id="@+id/editSalary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/EmpSalary"
                    android:textColor="#000"
                    android:textSize="10sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtSalary"
                    android:layout_width="88dp"
                    android:layout_height="match_parent"

                    android:textColor="#000"
                    android:textSize="10sp"
                    />


            </TableRow>





        </TableLayout>
        </LinearLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>